# social_media_api

./: .gitignore  main.py  pyproject.toml
config/: database.py
crud/: post.py  save.py  user.py
models/: post.py  save.py
schemas/: post.py  save.py
