[tool.poetry]
name = "social-media-api"
version = "0.1.0"
description = ""
authors = ["Rani <ranip130303@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
motor = "^3.5.1"
pymongo = "^4.8.0"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
